--- a/code/manifest.json
+++ b/code/manifest.json
@@ -4,7 +4,7 @@
   "name": "__MSG_name__",
   "short_name": "__MSG_short_name__",
   "description": "__MSG_description__",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "author": "Nick Schorr",
   "default_locale": "en",
 
@@ -16,7 +16,7 @@
 
   "browser_action": {
     "default_icon": "images/icon_noblock_38.png",
-    "default_title": "/r/Formula1 Sidebar Spoiler Stopper",
+    "default_title": "__MSG_name__",
     "default_popup": "html/popup.html"
   },
 
@@ -24,7 +24,7 @@
       {
         "matches": ["*://*.reddit.com/r/formula1/*", "*://reddit.com/r/formula1/*"],
         "js": ["js/blocker.js"],
-        "run_at": "document_end"
+        "run_at": "document_start"
       }
   ],
 
